--- a/playbook.yaml
+++ b/playbook.yaml
@@ -5,10 +5,9 @@ site:
   start_page: writing-test::index.adoc
 content:
   sources:
-  - url: .
-    branches: HEAD
-    start_paths:
-    - writing-test
+  - url: https://git.magnolia-cms.com/scm/documentation/writing-test.git
+    branches: master
+ui:
   bundle:
     url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/master/raw/build/ui-bundle.zip?job=bundle-stable
     snapshot: true
